Added:swagger added for get note  by TDD
