# FundooNote/swagger/swagger.json
@@ -158,9 +158,44 @@
                     }
                 }
             }
+        },
+        "/getnotes": {
+            "get": {
+                "tags": [
+                    "Get Notes"
+                ],
+                "description": "Get a  note !!",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "Authorization",
+                        "description": "Token for vaidation",
+                        "schema": {
+                            "type": "string",
+                            "required": true
+                        }
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "schema": {
+                    "$ref": "#/definitions/notes"
+                },
+                "responses": {
+                    "201": {
+                        "description": "Get note succesfully !!"
+                    },
+                    "401": {
+                        "description": "Please enter Valid Token"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
         }
     },
-
     "definitions": {
         "registerUser": {
             "type": "object",
@@ -205,10 +240,10 @@
             "type": "object",
             "properties": {
                 "token": {
+                "random_string": {
                     "type": "string"
                 },
-                "password": {
-                    "type": "string"
+                "password": {    "type": "string"
                 }
             }
         },
@@ -223,9 +258,11 @@
                 }
             },
             "example": {
+                "user_id":12,
                 "title": "Tittle",
                 "description": "description"
             }
         }
     }
-} 
+    }
+}
